redraw signin and signup page

--- a/designSite/account/templates/index.html
+++ b/designSite/account/templates/index.html
@@ -52,10 +52,10 @@
 <script src="/static/semantic/dist/components/tab.min.js"></script>
 <script>
   $('#signup').on('click', function () {
-    window.location.href = '/register';
+    window.location.href = '/signup';
   });
   $('#signin').on('click', function () {
-    window.location.href = '/login';
+    window.location.href = '/signin';
   });
   $('#logout').on('click', function () {
     window.location.href = '/logout';
