--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -198,45 +198,79 @@
     </div>
   </div>
 
-  <!-- Creating new part modal -->
-  <div id="new-part-modal" class="ui tiny modal">
+  <!-- Choose add gene/material -->
+  <div id="choose-added-part-type" class="ui tiny modal">
+    <div class="ui content container">
+      <h5>Choose the type of part you add.</h5>
+      <div>
+        <button class="ui inverted basic button" id="add-gene-button">Gene(CDS, RBS...)</button>
+      </div>
+      <br>
+      <div>
+        <button class="ui inverted basic button" id="add-material-button">Material(Protein, DNA...)</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Creating new gene modal -->
+  <div id="new-gene-modal" class="ui tiny modal">
     <div class="content">
       <form class="ui form">
         <div class="field">
           <label>Name</label>
-          <input type="text" name="name" id="part-name" placeholder="Part Name">
+          <input type="text" name="name" id="gene-name" placeholder="Gene Name">
         </div>
         <div class="field">
           <label>Description</label>
-          <textarea id="part-description" rows=2 placeholder="Description"></textarea>
-        </div>
-        <div class="field">
-          <label>Role</label>
-          <div class="ui floating selection dropdown" id="part-role-dropdown">
-            <i class="dropdown icon"></i>
-            <div class="default text">Part role</div>
-          </div>
+          <textarea id="gene-description" rows=2 placeholder="Description"></textarea>
         </div>
         <div class="field">
           <label>Type</label>
-          <div class="ui floating selection dropdown" id="part-type-dropdown">
+          <div class="ui floating selection dropdown" id="gene-type-dropdown">
             <i class="dropdown icon"></i>
-            <div class="default text">Part type</div>
+            <div class="default text">Gene type</div>
           </div>
         </div>
         <div class="field">
-          <label>Part Sequence</label>
-          <textarea name="part-sequence" id="part-sequence" placeholder="Part Sequence"></textarea>
+          <label>Gene Sequence</label>
+          <textarea name="gene-sequence" id="gene-sequence" placeholder="Sequence"></textarea>
         </div>
-
-      </form>
+      </form> 
     </div>
     <div class="actions">
       <div class="ui one bottom attached big buttons">
-        <div id="add-new-part" class="ui white button">Add this part to database!</div>
+        <div id="add-new-gene" class="ui white button">Add this gene to database!</div>
       </div>
     </div>
   </div>
+
+  <!-- Creating new material modal -->
+  <div id="new-material-modal" class="ui tiny modal">
+      <div class="content">
+        <form class="ui form">
+          <div class="field">
+            <label>Name</label>
+            <input type="text" name="name" id="material-name" placeholder="Material Name">
+          </div>
+          <div class="field">
+            <label>Description</label>
+            <textarea id="material-description" rows=2 placeholder="Description"></textarea>
+          </div>
+          <div class="field">
+            <label>Type</label>
+            <div class="ui floating selection dropdown" id="material-type-dropdown">
+              <i class="dropdown icon"></i>
+              <div class="default text">Material type</div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="actions">
+        <div class="ui one bottom attached big buttons">
+          <div id="add-new-material" class="ui white button">Add this material to database!</div>
+        </div>
+      </div>
+    </div>
 
   <!-- click and get part's detail modal -->
   <div id="inspect-item-modal" class="ui tiny modal">
