[fix] fixed signup button & some front end detail

--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -16,10 +16,10 @@
           <img id="logo" src="/static/img/logo.png">
         </a>
         <div class="right item">
-          <h5>Welcome, {{ user.username }} !</h5>
+          <h5>Welcome, {{ user.username }}!</h5>
         </div>
         <div class="item">
-          <a id="logout" class="ui inverted button">Log out</a>
+          <a id="logout" class="ui inverted button">Log Out</a>
         </div>
       </div>
     </div>
