--- a/designSite/account/templates/signup.html
+++ b/designSite/account/templates/signup.html
@@ -71,7 +71,7 @@
       <!-- Button panel -->
       <div id="action-panel">
         <a class="back" href="/signin">Have an account? Sign in now!</a>
-        <a id="signin-button" class="next">Next</a>
+        <a id="signup-button" class="next">Next</a>
       </div>
     </div>
   </div>
