add "readonly" attri to some fields

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -298,11 +298,11 @@
         </div>
         <div class="field">
           <label>Description</label>
-          <textarea rows="6" name="component-description"></textarea>
+          <textarea rows="6" name="component-description" readonly="readonly"></textarea>
         </div>
         <div class="field">
           <label>DNA Sequence</label>
-          <textarea name="component-sequence"></textarea>
+          <textarea name="component-sequence" readonly="readonly"></textarea>
         </div>
       </form>
     </div>
