--- a/designSite/static/css/personal_index.css
+++ b/designSite/static/css/personal_index.css
@@ -1,4 +1,10 @@
-#circuit-card .ui.segment:hover {
+#master-table tbody:hover,
+#share-table tbody:hover {
     border-color: rgba(255,0,0,0.3);
     background-color: rgba(255,0,0,0.05);
+    cursor: pointer;
+}
+
+th, tr, h5{
+    text-align: center;
 }
