--- a/designSite/static/css/design.css
+++ b/designSite/static/css/design.css
@@ -7,7 +7,8 @@
 }
 
 .menu a.active>img {
-  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.7)); /*Highlight the mode button*/
+  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.7));
+  /*Highlight the mode button*/
   transition: all 0.2s ease;
 }
 
@@ -393,7 +394,7 @@ div h5,
 }
 
 .ui.divider {
-  border: 1px solid rgba(34,36,38,.15) !important;
+  border: 1px solid rgba(34, 36, 38, .15) !important;
 }
 
 #chassis-dropdown {
@@ -404,7 +405,8 @@ div h5,
   width: 100%;
 }
 
-.tab {
+/* Share modal tab */
+.bottom.attached.tab {
   padding: 0 !important;
   border: 0 !important;
 }
