add authority property in share model in personal_index page

--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -116,6 +116,7 @@
             <th class="sorted descending">Name</th>
             <th class="sorted descending">Author</th>
             <th class="sorted descending">Description</th>
+            <th class="sorted descending">Authority</th>
             <th class="sorted descending">Last Editor</th>
             <th class="sorted descending">Last Update Time</th>
           </tr>
@@ -126,6 +127,7 @@
           <td>{{ circuit.Name }}</td>
           <td>{{ circuit.Author }}</td>
           <td>{{ circuit.Description }}</td>
+          <td>{{ circuit.Authority }}</td>
           <td>{{ circuit.LastEditor }}</td>
           <td>{{ circuit.LastUpdateTime }}</td>
         </tbody>
