--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -124,9 +124,11 @@
     <a class="item" id="load-button">
       <img src="/static/img/design/load.png">
     </a>
+    {% if write_authority %}
     <a class="item" id="save-button">
       <img src="/static/img/design/save.png">
     </a>
+    {% endif %}
     <a class="item" id="save-as-new-button">
       <img src="/static/img/design/save.png">
     </a>
